website/versioned_docs/version-2.13.x/reference/subsystems/debugpy.mdx
---
title: debugpy
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

An implementation of the Debug Adapter Protocol for Python (https://github.com/microsoft/debugpy).

Backend: <span className="color--primary">`pants.backend.python`</span>

Config section: <span className="color--primary">`[debugpy]`</span>

<span className={styles.options}>

## Basic options

### `args`

<Option
  cli_repr={`--debugpy-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr="PANTS_DEBUGPY_ARGS"
  default_repr={`[]`}
>
  Arguments to pass directly to debugpy, e.g.
  `--debugpy-args='--log-to-stderr'`.
</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--debugpy-version=<str>`}
  env_repr="PANTS_DEBUGPY_VERSION"
  default_repr={`debugpy==1.6.0`}
>
  Requirement string for the tool.
</Option>

### `extra_requirements`

<Option
  cli_repr={`--debugpy-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr="PANTS_DEBUGPY_EXTRA_REQUIREMENTS"
  default_repr={`[]`}
>
  Any additional requirement strings to use with the tool. This is useful if the
  tool allows you to install plugins or if you need to constrain a dependency to
  a certain version.
</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--debugpy-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr="PANTS_DEBUGPY_INTERPRETER_CONSTRAINTS"
  default_repr={`["CPython>=3.7,<3.11"]`}
>
  Python interpreter constraints for this tool.
</Option>

### `lockfile`

<Option
  cli_repr={`--debugpy-lockfile=<str>`}
  env_repr='PANTS_DEBUGPY_LOCKFILE'
  default_repr={`<default>`}
>
Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` and `--extra-requirements` options, and the tool&#x27;s interpreter constraints are compatible with the default. Pants will error or warn if the lockfile is not compatible (controlled by `[python].invalid_lockfile_behavior`). See https://github.com/pantsbuild/pants/blob/release_2.13.1/src/python/pants/backend/python/subsystems/debugpy.lock for the default lockfile contents.

Set to the string `<none>` to opt out of using a lockfile. We do not recommend this, though, as lockfiles are essential for reproducible builds.

To use a custom lockfile, set this option to a file path relative to the build root, then run `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 generate-lockfiles --resolve=debugpy`.

As explained at https://www.pantsbuild.org/v2.13/docs/python-third-party-dependencies, lockfile generation via `generate-lockfiles` does not always work and you may want to manually generate the lockfile. You will want to set `[python].invalid_lockfile_behavior = 'ignore'` so that Pants does not complain about missing lockfile headers.

</Option>

### `console_script`

<Option
  cli_repr={`--debugpy-console-script=<str>`}
  env_repr="PANTS_DEBUGPY_CONSOLE_SCRIPT"
  default_repr={`None`}
>
  The console script for the tool. Using this option is generally preferable to
  (and mutually exclusive with) specifying an --entry-point since console script
  names have a higher expectation of staying stable across releases of the tool.
  Usually, you will not want to change this from the default.
</Option>

### `entry_point`

<Option
  cli_repr={`--debugpy-entry-point=<str>`}
  env_repr="PANTS_DEBUGPY_ENTRY_POINT"
  default_repr={`debugpy`}
>
  The entry point for the tool. Generally you only want to use this option if
  the tool does not offer a --console-script (which this option is mutually
  exclusive with). Usually, you will not want to change this from the default.
</Option>

## Deprecated options

None

</span>

